# mau-reader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/mau_reader/: __init__.py  mau_reader.py  test_mau_reader.py
pelican/plugins/mau_reader/test_data/: article_with_content.html  article_with_content_custom.html
