[tool.poetry]
name = "pelican-mau-reader"
version = "2.0.0"
description = "Pelican plugin that converts Mau-formatted content into HTML"
authors = ["Leonardo Giordani <giordani.leonardo@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/pelican-plugins/mau-reader"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/mau-reader/issues"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pelican = ">=4.5"
markdown = {version = ">=3.2", optional = true}
mau = ">=2.0.0,<3.0"

[tool.poetry.dev-dependencies]
black = "^23"
flake8 = "^3.9"
flake8-black = "^0.2.0"
invoke = "^2.0"
isort = "^5.12.0"
livereload = "^2.6"
markdown = "^3.2"
pytest = "^6.0"
pytest-cov = "^2.8"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"
Werkzeug = "^1.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Mau Reader"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
