[tool.poetry]
name = "pelican-mau-reader"
version = "2.0.0"
description = "Pelican plugin that converts Mau-formatted content into HTML"
authors = ["Leonardo Giordani <giordani.leonardo@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/pelican-plugins/mau-reader"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/mau-reader/issues"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pelican = ">=4.5"
markdown = {version = ">=3.4", optional = true}
mau = ">=2.0.0,<3.0"

[tool.poetry.dev-dependencies]
black = ">=23.7.0"
invoke = ">=2.2"
markdown = ">=3.4"
pytest = ">=7.0"
pytest-cov = ">=4.0"
pytest-sugar = ">=0.9.7"
ruff = ">=0.0.287"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Mau Reader"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true

[tool.ruff]
select = [
  "B",   # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "PGH", # pygrep-hooks
  "PL",  # pylint
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]

ignore = [
  "D100",    # missing docstring in public module
  "D102",    # missing docstring in public method
  "D104",    # missing docstring in public package
  "D107",    # missing docstring in `__init__` function
  "D203",    # blank line before class docstring
  "D213",    # multi-line docstring summary should start at the second line
  "PLW2901", # `for` loop variable overwritten by assignment target
]

target-version = "py38"

[tool.ruff.per-file-ignores]
"**/test_mau_reader.py" = ["D103", "E501"]

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["pelican"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
